# CG_TP_2

./: CG_TP_2.cpp  CG_TP_2.h  CMakeLists.txt  Makefile
house_zip/: Makefile
house_zip/src/: main.cpp
src/: Model.cpp  Model.hpp  ObjLoader.cpp  ObjLoader.hpp
